--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
       <div class="header-actions">
 
         <div class="header-contact">
-          <a href="tel:88002345678" class="contact-link">+91 95513 24623</a>
+          <a href="tel:88002345678" class="contact-link">+91 9551324623</a>
 
           <span class="contact-time">Mon - Sat: 9:00 am - 6:00 pm</span>
         </div>
